# Science_Chatbot

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  RoadMap.md  docker-compose.yml  eval_avg.py  evaluate.py  graph.py  ingest.py  main.py  models.py  pyproject.toml  retrieval.py  tool.py
.github/workflows/: deploy.yml
docs/: DEPLOY.md  README_08.md  README_09.md  README_10.md  README_11.md  README_12.md  RoadMap.md  eval.md  train_qa.json
evaluation/: eval.json  eval_avg.py  evaluate.py  generate_eval_md.py
evaluation/results/: eval_Qwen-tuned.json  eval_claude.json  eval_gemini.json  eval_graph-Qwen-only.json  eval_graph-claude-only-v0.3.json  eval_graph-claude-only-v0.4.json  eval_graph-claude-only.json  eval_graph-gemini-only.json  eval_graph.json  eval_graph0.2.json  eval_qwen-tuned-q4.json
frontend/: Dockerfile  app.py  pyproject.toml
results/: eval_graph-Qwen.json
tests/: conftest.py  test_invoke_with_fallback.py  test_reset_turn.py  test_routing.py  test_tokens.py
